# yet-another-bad-wasm-interpreter

./: Cargo.toml
src/: decoder.rs  main.rs  run.rs  util.rs
src/wasm/: instructions.rs  modules.rs  types.rs  values.rs
