# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                    = "yet-another-bad-wasm-interpreter"
version                 = "0.0.0"
authors                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                 = "2018"
publish                 = false
repository              = "https://github.com/MaulingMonkey/yet-another-bad-wasm-interpreter"
license                 = "Apache-2.0 OR MIT"

[dependencies]
